--- a/src/main/resources/i18n/messages_vi.properties
+++ b/src/main/resources/i18n/messages_vi.properties
@@ -3,4 +3,4 @@ transaction.validate=Transaction validation failed.
 id.not-null=ID must not be null;
 data.not-null=ID must not be null;
 e-data.not-null=ID must not be null;
-transaction.not-found=Can't not found id: 
+transaction.not-found=Can't not found ID=
